RA-03-сверстал и стилизовал кнопки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RecipesApp</string>
+    <string name="button_categories">КАТЕГОРИИ</string>
+    <string name="button_favourites">ИЗБРАННОЕ</string>
 </resources>
