RA-05-создал FavoritesFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="title_categories">Категории</string>
     <string name="title_favourites">Избранное</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">fragment_list_categories</string>
+    <string name="hello_blank_favorites">fragment_list_favorites</string>
+    <string name="hello_blank_categories">fragment_list_categories</string>
 </resources>
