RA-11-реализовал фрагмент со спискам рецептов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="hello_blank_favorites">fragment_list_favorites</string>
     <string name="hello_blank_categories">fragment_list_categories</string>
     <string name="title_recipes">Рецепт</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
